# smart-pet-feeder

./: LICENSE  README.md
server/server1.0/server_src/: app.py  console.py  feed_api.py  log_config.py  main.py  scheduler.py
server/server1.0/server_src/templates/: index.html
server/server1.0/server_src/test/: mysql_con.py
target_copy/: sdkconfig  sdkconfig.old
target_copy/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
target_copy/main/blufi/: blufi_example.h  blufi_example_main.c
target_copy/main/logs/: logs.c  logs.h
target_copy/main/lvgl/: led_brightness.c  led_brightness.h  st7789.c  st7789.h  ui.c  ui.h  ui_Screen1.c
target_copy/main/peripheral/: DS18B20.c  DS18B20.h  count.c  count.h  level.c  level.h  peripheral.c  peripheral.h  servo.c  servo.h  waterctrol.c  waterctrol.h
target_copy/main/time/: gettime.c  gettime.h
target_copy/main/websocket/: webcoket.c  webscoket.h
